5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1650_869.log
== SUBMITION (2019-04-05 00:49:02) 
-- CODE:
x=float(input"Digite o valor da compra: ")
if(x>=200):
	x=x*0.95
print(round(x,2))
	
-- EXECUTION TIME:
0.21393
-- ERROR:
  File "/home/codebench/codes/1650/869/main.py", line 1
    x=float(input"Digite o valor da compra: ")
                                            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 00:49:07) 
-- CODE:
x=float(input"Digite o valor da compra: ")
if(x>=200):
	x=x*0.95
print(round(x,2))
	
-- ERROR:
File "XXXX", line 1
    x=float(input"Digite o valor da compra: ")
                                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 00:49:29) 
-- CODE:
x=float(input("Digite o valor da compra: "))
if(x>=200):
	x=x*0.95
print(round(x,2))
	
-- EXECUTION TIME:
0.133474
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 13:33:51) 
-- CODE:
x=float(input("Digite o valor da compra: "))
if(x>=200):
	x=x*0.95
print(round(x,2))
	
-- EXECUTION TIME:
0.178477
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
